<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ WiFiAnalyzer
  ~ Copyright (C) 2015 - 2025 VREM Software Development <VREMSoftwareDevelopment@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_wifi_band"
        android:title="@string/wifi_band_title"
        app:showAsAction="ifRoom|withText"
        tools:title="5\nGhz">
        <menu>
            <item
                android:id="@+id/action_wifi_band_2ghz"
                android:title="@string/wifi_band_2ghz" />
            <item
                android:id="@+id/action_wifi_band_5ghz"
                android:title="@string/wifi_band_5ghz" />
            <item
                android:id="@+id/action_wifi_band_6ghz"
                android:title="@string/wifi_band_6ghz" />
        </menu>
    </item>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/filter_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_scanner"
        android:icon="@drawable/ic_pause"
        android:title="@string/scanner_pause"
        app:showAsAction="ifRoom" />

</menu>